<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_bg"
    tools:context=".ExecutiveAdminActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen28"
        android:layout_marginTop="@dimen/dimen40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvExecutiveAdmin"
        style="@style/executive_admin_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen90"
        android:layout_marginTop="@dimen/dimen40"
        android:text="@string/executive_admin_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvC_Level"
        style="@style/c_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen90"
        android:layout_marginTop="@dimen/dimen8"
        android:text="@string/c_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExecutiveAdmin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_Bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen140"
        android:background="@drawable/bg_curve_off_white_46"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvC_Level">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExecutiveAdmin"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen50"
            android:background="@drawable/btn_curve_green_12"
            android:text="@string/btn_executive_admin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMarketingSocialMedia"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen50"
            android:background="@drawable/btn_curve_white_12"
            android:text="@string/btn_marketing_social_media"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnExecutiveAdmin"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvExecutiveAdminDetail"
            style="@style/executive_admin_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen30"
            android:text="@string/executive_admin_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExecutiveAdmin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForMoreThanADecade"
            style="@style/For_more_than_a_decade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen10"
            android:text="@string/for_more_than_a_decade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExecutiveAdminDetail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSection"
            style="@style/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen40"
            android:drawableStart="@drawable/ic_section"
            android:drawablePadding="15dp"
            android:text="@string/section"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForMoreThanADecade" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:src="@drawable/img_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSection" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResearch"
            style="@style/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20"
            android:drawableStart="@drawable/ic_search2"
            android:drawablePadding="15dp"
            android:text="@string/research"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLine" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:src="@drawable/img_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResearch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDiaryManagement"
            style="@style/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20"
            android:drawableStart="@drawable/ic_diary"
            android:drawablePadding="15dp"
            android:text="@string/diary_management"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResearch" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLine3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:src="@drawable/img_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiaryManagement" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCallScreening"
            style="@style/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20"
            android:drawableStart="@drawable/ic_call"
            android:drawablePadding="15dp"
            android:text="@string/call_screening"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDiaryManagement" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLine4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:src="@drawable/img_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCallScreening" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTodoList"
            style="@style/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20"
            android:drawableStart="@drawable/ic_todo_list"
            android:drawablePadding="15dp"
            android:text="@string/to_do_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCallScreening" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLine5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:src="@drawable/img_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTodoList" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWordProcessing"
            style="@style/section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen20"
            android:drawableStart="@drawable/ic_word_processing"
            android:drawablePadding="15dp"
            android:text="@string/word_processing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTodoList" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLine6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen20"
            android:src="@drawable/img_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWordProcessing" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>