<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:background="@drawable/bg_curve_green_52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBG_Image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen68"
            android:layout_marginTop="@dimen/dimen62"
            android:layout_marginEnd="@dimen/dimen68"
            android:layout_marginBottom="@dimen/dimen62"
            android:src="@drawable/img_first_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDiscovered_virtual_assistants"
        style="@style/discovered_virtual_assistants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen50"
        android:text="@string/discovered_virtual_assistants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWeCareWeTake"
        style="@style/we_care_we_take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20"
        android:text="@string/we_care_we_take"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiscovered_virtual_assistants" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegister"
        style="@style/register"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="@dimen/dimen28"
        android:layout_marginTop="@dimen/dimen50"
        android:layout_marginEnd="@dimen/dimen8"
        android:background="@drawable/bg_curve_green_light_8"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeCareWeTake" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        style="@style/Login"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="@dimen/dimen8"
        android:layout_marginTop="@dimen/dimen50"
        android:layout_marginEnd="@dimen/dimen28"
        android:background="@drawable/bg_curve_green_light_8"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvRegister"
        app:layout_constraintTop_toBottomOf="@+id/tvWeCareWeTake" />

</androidx.constraintlayout.widget.ConstraintLayout>

